# agent-penny

./: .env.example  .gitignore  .pre-commit-config.yaml  .test.env  Dockerfile  Makefile  README.md  app.py  chainlit.md  pyproject.toml  requirements.txt
.agents/skills/code-reviewer/: SKILL.md
.chainlit/: config.toml
.gemini/: settings.json
.gemini/skills/code-reviewer/: SKILL.md
.gemini/skills/update-readme/: SKILL.md
.github/workflows/: development.yml  makefile.yml  release.yml
agent_penny/: agent.py  audio.py  chainlit_utils.py  data.py  logging.py  settings.py  telegram_bot.py  types.py  user_data.py  user_data_server.py
agent_penny/auth/: google.py
agent_penny/capabilities/: date.py  images.py  memory.py  scheduling.py  skills.py  telegram.py  web.py
agent_penny/models/: codex.py
agent_penny/providers/: google.py  wttr.py
agent_penny/tools/: approval.py  date.py  memory.py  perplexity.py  tavily_search.py  web.py
public/: agent_penny.css  mic_fix.js
tests/: conftest.py  test_app.py  test_audio.py  test_codex.py  test_date.py  test_google.py  test_perplexity.py  test_scheduling.py  test_settings.py  test_skills.py  test_tavily_search.py  test_telegram.py  test_tool_avatars.py  test_types.py  test_web.py  utils.py  wikipedia_Miss_Moneypenny.html
